Organized files for more dev
survey - index.html, survey.js
writeup-writeup.html (previous index.html),  interactive_vz.js, plot.js (previous index.js).
made a global.js for website spanning features

--- a/style.css
+++ b/style.css
@@ -79,3 +79,10 @@ select {
     padding: 5px;
     margin: 0 5px;
 }
+
+nav {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 20px 0;
+}
