--- a/style.css
+++ b/style.css
@@ -86,3 +86,22 @@ nav {
     gap: 10px;
     margin: 20px 0;
 }
+
+/* Survey Styling */
+
+li {
+    text-decoration: none;
+    list-style-type: none;
+}
+
+.survey {
+    width: 80%;
+    margin: 20px auto;
+    background: pink;
+    color: black;
+    height: 230px;
+    border-radius: 3px;
+    box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.2);
+}
+
+/* Display Change Properties */
