--- a/writeup/writeup.css
+++ b/writeup/writeup.css
@@ -28,6 +28,7 @@ body, h1, h2, h3, p, ul, li, label, input, span, div, nav, a {
     display: flex;
     flex-direction: column;
     min-width: 150px;
+    cursor: url('cursor.png'), auto;
 }
 
 /* Basic vertical alignment for options */
@@ -35,6 +36,7 @@ body, h1, h2, h3, p, ul, li, label, input, span, div, nav, a {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    cursor: url('cursor.png'), auto;
 }
 
 /* Narrative panel styling */
