--- a/style.css
+++ b/style.css
@@ -233,3 +233,37 @@ li {
 .q5 {
     display: none;
 }
+
+.survey-2 {
+    width: 80%;
+    margin: 20px auto;
+    color: black;
+    height: 230px;
+    border-radius: 3px;
+    /* box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.2); */
+}
+
+.survey-2, .survey-2 * {
+    font-family: 'Roboto', sans-serif; /* Apply the new font */
+}
+
+.survey-2 .question {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.survey-2 .question h3 { /* question title */
+    margin: 0 0 10px 0;
+    font-size: 20px;
+}
+
+.survey-2 .question p { /* question */
+    margin: 0 0 10px 0;
+    font-size: 20px;
+}
